added all sections and comments

--- a/index.html
+++ b/index.html
@@ -9,12 +9,42 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <!--Body Header  -->
     <header>
         <h1>My Resume</h1>
     </header>
 
+    <!-- Main body -->
     <main>
+        <!-- About section -->
+        <section id="about">
 
+        </section>
+
+        <!-- Skills section -->
+        <section id="skills">
+
+        </section>
+
+        <!-- Education section -->
+        <section id="education">
+
+        </section>
+
+        <!--Experience section  -->
+        <section id="experience">
+
+        </section>
+
+        <!-- Projects section -->
+        <section id="projects">
+
+        </section>
+
+        <!-- Contact section -->
+        <section id="contact">
+            
+        </section>
     </main>
 
     <script src="./script.js"></script>
