--- a/index.html
+++ b/index.html
@@ -6,12 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anil Chaturvedi</title>
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!--Body Header  -->
-    <header>
-        <h1>My Resume</h1>
+    <header id="body-header">
+        <nav>
+            <ul class="horizental-list text-center nav-menu">
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#about">About</a>
+                </li>
+                <li>
+                    <a href="#skill">Skills</a>
+                </li>
+                <li>
+                    <a href="#educaton">Education</a>
+                </li>
+                <li>
+                    <a href="#experience">Experience</a>
+                </li>
+                <li>
+                    <a href="#project">Projects</a>
+                </li>
+                <li>
+                    <a href="#contact">Contacts</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <!-- Main body -->
