--- a/index.html
+++ b/index.html
@@ -37,6 +37,40 @@
                 </li>
             </ul>
         </nav>
+        <div id="name-social-container" class="text-center">
+            <div class="name-container">
+                <h1>Anil Chaturvedi</h1>
+            </div>
+            <div class="social-icons-container">
+                <ul class="horizental-list text-center">
+                    <li>
+                        <a href="">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fa-brands fa-whatsapp"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fa-brands fa-telegram"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </header>
 
     <!-- Main body -->
