--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
     <main>
         <!-- About section -->
         <section id="about">
-
+            <div id="image-container" class="text-center">
+                <img src="./images/me.jpg" alt="">
+            </div>
         </section>
 
         <!-- Skills section -->
