about section added

--- a/index.html
+++ b/index.html
@@ -76,15 +76,24 @@
     <!-- Main body -->
     <main>
         <!-- About section -->
-        <section id="about">
+        <section id="about" class="mb75px">
             <div id="image-container" class="text-center">
                 <img src="./images/me.jpg" alt="">
             </div>
+            <div>
+                <p id="about-para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem eius, aperiam fugiat ducimus illo eos ipsam, facere obcaecati adipisci voluptatibus rem, culpa cum blanditiis ullam facilis! Iusto adipisci minima asperiores.
+                    Facere quam dolorum dolore, odit minima asperiores molestiae voluptates? Optio ut qui culpa nesciunt ab amet neque dicta soluta repellendus! Ipsum non nisi distinctio perferendis. Eos voluptatum atque id facere.
+                    Doloremque porro in id dolores, accusamus amet natus laborum rem, ex earum quae ratione ipsam deserunt error iusto officiis quos! Explicabo quos facilis ipsam perspiciatis maiores officiis vel facere minima?
+                </p>
+            </div>  
         </section>
 
         <!-- Skills section -->
-        <section id="skills">
+        <section id="skills" class="text-center">
+            <h1>
 
+            </h1>
         </section>
 
         <!-- Education section -->
