skill section structure added

--- a/index.html
+++ b/index.html
@@ -91,9 +91,72 @@
 
         <!-- Skills section -->
         <section id="skills" class="text-center">
-            <h1>
-
+            <h1 class="section-heading">
+                <span>
+                    <i class="fa-solid fa-chalkboard-user"></i>
+                </span>
+                <span>SKILLS</span>
             </h1>
+
+            <div id="skill-display"  class="text-center">
+                <div class="skill-progress">
+                    <div>
+                        <div class="skill-name">
+                            <span>JAVA</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div>
+                        <div class="skill-name">
+                            <span>HTML</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div>
+                        <div class="skill-name">
+                            <span>CSS</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div>
+                        <div class="skill-name">
+                            <span>JavaScript</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div>
+                        <div class="skill-name">
+                            <span>Nodejs</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div>
+                        <div class="skill-name">
+                            <span>Express</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div>
+                        <div class="skill-name">
+                            <span>React</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div>
+                        <div class="skill-name">
+                            <span>Mongodb</span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </section>
 
         <!-- Education section -->
